# deeppsl-python

./: README.md  pyproject.toml  requirements.txt
deeppsl/: pyproject.toml  requirements.txt
deeppsl/core/: clause.py
deeppsl/examples/: zero_shot_learning.py
deeppsl/layers/: perception.py  reasoning.py
deeppsl/psl/: optimization.py  solver.py
deeppsl/rules/: compiler.py
deeppsl/train/: trainer.py
deeppsl/utils/: datasets.py
examples/: zero_shot_learning.py
tests/: test_rules.py  test_solver.py
