[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deeppsl"
version = "0.1.0"
description = "DeepPSL: End-to-end trainable neuro-symbolic framework combining deep perception with probabilistic soft logic reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "cvxpy>=1.4.0",
    "cvxpylayers>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Repository = "https://github.com/xwtan/deeppsl"
